--- a/GeneralToolbox/FinancialApplications/macd-Plaintext/macd.ipynb
+++ b/GeneralToolbox/FinancialApplications/macd-Plaintext/macd.ipynb
@@ -36,13 +36,13 @@
     "    \n",
     "    ema = []\n",
     "    time = 1\n",
-    "\n",
+    "    \n",
     "    # get the average of the first n data points\n",
     "    head = sum(ls[:n])/n\n",
     "    multiplier = 2/float(1 + n)\n",
     "    ema.append(head)\n",
     "\n",
-    "    # EMA(current) = ((Price(current) - EMA(prev) ) x Multiplier) + EMA(prev)\n",
+    "    # EMA(current) = ((Price(current) - EMA(prev) ) * Multiplier) + EMA(prev)\n",
     "    ema.append(((ls[n] - head) * multiplier) + head)\n",
     "\n",
     "    # calculate the rest of the values\n",
