init arma module

--- a/GeneralToolbox/ARMA-HEAAN/arma.ipynb
+++ b/GeneralToolbox/ARMA-HEAAN/arma.ipynb
@@ -34,42 +34,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Returns an n period exponential moving average for the time series data\n",
-    "def ema(ls, n):\n",
+    "# ARMA model\n",
+    "def arma(data, p, q, ar_coeff, ma_coeff):\n",
+    "    ar = 0\n",
+    "    ma = 0\n",
+    "    for i in range(0, p):\n",
+    "        ar += data[-i]*ar_coeff[-i]\n",
+    "    for i in range(0, q):\n",
+    "        ma += data[-i]*ma_coeff[-i]\n",
+    "        \n",
     "    \n",
-    "    ema = []\n",
-    "    time = 1\n",
-    "    \n",
-    "    # get the average of the first n data points\n",
-    "    head = sum(ls[:n])/n\n",
-    "    multiplier = 2/float(1 + n)\n",
-    "    ema.append(head)\n",
-    "\n",
-    "    # EMA(current) = ((Price(current) - EMA(prev) ) * Multiplier) + EMA(prev)\n",
-    "    ema.append(((ls[n] - head) * multiplier) + head)\n",
-    "\n",
-    "    # calculate the rest of the values\n",
-    "    for price in ls[n+1:]:\n",
-    "        tmp = ((price - ema[time]) * multiplier) + ema[time]\n",
-    "        time = time + 1\n",
-    "        ema.append(tmp)\n",
-    "    return ema"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the sign of a number\n",
-    "def sign(x):\n",
-    "    if x > 0:\n",
-    "        return 1\n",
-    "    elif x < 0:\n",
-    "        return -1\n",
-    "    else:\n",
-    "        return 0"
+    "    "
    ]
   },
   {
@@ -89,61 +64,6 @@
     "        for i in range(0, n):\n",
     "            sm += abs((ls1[i]-ls2[i])/ls2[i])*100\n",
     "        return sm/n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A flipped ReLU function\n",
-    "def flip_relu(x):\n",
-    "    if x < 0:\n",
-    "        return -1\n",
-    "    else:\n",
-    "        return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Return the trading decisions based on the MACD signals\n",
-    "def dec(macd):\n",
-    "    \n",
-    "    decisions = []\n",
-    "\n",
-    "    for i in range(1, len(macd)):\n",
-    "        dec_point = flip_relu(macd[i-1]*macd[i])\n",
-    "        decision = sign(dec_point*(macd[i-1] - macd[i]))\n",
-    "        decisions.append(decision)\n",
-    "            \n",
-    "    return decisions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Return the trading decisions based on the MACD signals by approximation\n",
-    "def dec_approx(macd, norm):\n",
-    "    \n",
-    "    decisions = []\n",
-    "\n",
-    "    for i in range(1, len(macd)):\n",
-    "        mt_1 = norm*macd[i-1]\n",
-    "        mt = norm*macd[i]\n",
-    "        x = mt_1*mt\n",
-    "        tmp = 0.00002635*x**8 - 0.0003472*x**6 + 0.0052083*x**4 - 0.2*x**2 + 0.25*x - 0.061\n",
-    "        tmp *= (mt_1 - mt)\n",
-    "        decisions.append(tmp)\n",
-    "        \n",
-    "    return decisions"
    ]
   },
   {
@@ -213,9 +133,6 @@
     }
    ],
    "source": [
-    "ema12_plaintext = ema12_plaintext[:90]\n",
-    "pe_ema12_heaan = pe(ema12_heaan, ema12_plaintext)\n",
-    "\n",
     "plt.figure(figsize=(20, 10))\n",
     "plt.plot(ema12_plaintext, color='blue', alpha=0.5, label='ema12-plaintext')\n",
     "plt.plot(ema12_heaan, color='red', alpha=0.5, label='ema12-heaan')\n",
